tests/fixtures/fail/throw_omitted_return_type.sc
let fail() = {
  throw true
}

let main(): i32 = fail() ?? 42
